@@ -544,7 +544,9 @@ class EdPages(FNB.FlatNotebook):
         self.GoCurrentPage()
         self.GetTopLevelParent().Thaw()
         ed_msg.PostMessage(ed_msg.EDMSG_FILE_OPENED, self.control.GetFileName())
-        self.control.CheckEOL()
+
+        if Profile_Get('WARN_EOL', default=True):
+            self.control.CheckEOL()
 
     def GoCurrentPage(self):
         """Move Focus to Currently Selected Page.
